# django-smarnet

./: .env.example  .gitignore  .importlinter  AI_DEVELOPMENT_RULES.md  ARCHITECTURE.md  Dockerfile  OPENSPEC.md  README.md  TODO.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml
backend/: .gitignore  .importlinter  README.md  conftest.py  manage.py  pyproject.toml
backend/apps/branch_auth/infrastructure/: apps.py
backend/apps/branch_auth/infrastructure/migrations/: 0001_initial.py  0002_create_branch_managers_group.py
backend/apps/branch_auth/presentation/: apps.py  dependencies.py  exception_mappings.py  permissions.py
backend/apps/branch_auth/presentation/api/: urls.py
backend/apps/branch_auth/presentation/serializers/: branch_auth_serializers.py
backend/apps/branch_auth/presentation/views/: branch_auth_views.py
backend/apps/branch_auth/tests/: test_branch_auth_api.py
backend/apps/compras/application/dtos/: recebimento_dtos.py
backend/apps/compras/application/mappers/: recebimento_query_mapper.py
backend/apps/compras/application/use_cases/: ativa_fornecedor_use_case.py  exclui_fornec_contato_use_case.py  get_fornec_contato_use_case.py  get_fornecedor_use_case.py  get_pais_use_case.py  grava_fornec_contato_use_case.py  grava_fornecedor_use_case.py  inativa_fornecedor_use_case.py  list_fornec_contatos_use_case.py  list_fornecedores_use_case.py  list_msg_erros_use_case.py  list_paises_use_case.py
backend/apps/compras/domain/exceptions/: recebimento_exceptions.py
backend/apps/compras/domain/repositories/: recebimento_query_repository.py  recebimento_repository.py
backend/apps/compras/domain/services/: procedure_message.py
backend/apps/compras/infrastructure/: apps.py  models.py
backend/apps/compras/infrastructure/migrations/: 0001_initial.py
backend/apps/compras/infrastructure/repositories/: __init__.py  oracle_recebimento_query_repository_impl.py  oracle_recebimento_repository_impl.py
backend/apps/compras/presentation/: apps.py  dependencies.py  exception_mappings.py  permissions.py
backend/apps/compras/presentation/api/: urls.py
backend/apps/compras/presentation/serializers/: recebimento_serializers.py
backend/apps/compras/presentation/views/: recebimento_views.py
backend/apps/compras/tests/: test_dependencies.py  test_grava_fornecedor_use_case.py  test_models.py  test_oracle_recebimento_query_repository_impl.py  test_oracle_recebimento_repository_impl.py  test_permissions.py  test_procedure_message.py  test_query_use_cases.py  test_recebimento_api.py  test_recebimento_use_cases.py
backend/apps/shared/presentation/: apps.py  schema.py
backend/apps/shared/presentation/auth/: __init__.py  django_user_resolver.py  permissions.py  session_authentication.py  session_keys.py
backend/apps/shared/presentation/exceptions/: handler.py
backend/apps/shared/presentation/tests/: test_django_user_resolver.py  test_exception_handler.py  test_permissions.py  test_session_authentication.py
backend/apps/shared/tests/: test_bootstrap.py
backend/apps/users/application/dtos/: admin_user_input_dto.py  change_password_input_dto.py
backend/apps/users/application/mappers/: admin_user_mapper.py
backend/apps/users/application/ports/: auth_session_port.py
backend/apps/users/application/use_cases/: change_password_use_case.py  create_user_admin_use_case.py  get_current_user_use_case.py  get_user_use_case.py  list_groups_use_case.py  list_users_use_case.py  login_use_case.py  logout_use_case.py  register_use_case.py  reset_user_password_use_case.py  set_user_groups_use_case.py  update_user_use_case.py
backend/apps/users/domain/exceptions/: admin_exceptions.py  auth_exceptions.py
backend/apps/users/domain/repositories/: oracle_auth_repository.py  oracle_user_repository.py  user_admin_repository.py
backend/apps/users/infrastructure/: apps.py  db_router.py  models.py
backend/apps/users/infrastructure/middleware/: smar_database_middleware.py
backend/apps/users/infrastructure/repositories/: oracle_user_repository_impl.py  user_admin_repository_impl.py  user_security_repository_impl.py
backend/apps/users/infrastructure/session/: django_auth_session_store.py
backend/apps/users/presentation/: apps.py  dependencies.py  exception_mappings.py
backend/apps/users/presentation/api/: admin_urls.py  urls.py
backend/apps/users/presentation/serializers/: admin_serializers.py  auth_serializers.py
backend/apps/users/presentation/views/: admin_views.py  auth_views.py
backend/apps/users/tests/: conftest.py  test_admin_api.py  test_auth_api.py  test_change_password_api.py  test_change_password_use_case.py  test_create_user_admin_use_case.py  test_get_current_user_use_case.py  test_list_users_use_case.py  test_login_use_case.py  test_logout_use_case.py  test_oracle_auth_repository_impl.py  test_oracle_user_repository_impl.py  test_register_use_case.py  test_reset_user_password_use_case.py  test_smar_database_router.py  test_user_admin_repository_impl.py  test_user_security_repository_impl.py
backend/config/: asgi.py  drf.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py  testing.py
backend/config/tests/: conftest.py  test_openapi_schema.py
backend/requirements/: base.txt  development.txt
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/.lovable/: plan.md
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  client.ts
frontend/src/components/: AdminLayout.tsx  AdminSidebar.tsx  AppLayout.tsx  AppSidebar.tsx  LGPDBanner.tsx  LandingNav.tsx  LoginModal.tsx  ModulePage.tsx  PortalAdminSidebar.tsx  SmarnetLogo.tsx  TopNav.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/data/: templateMenu.ts
src/config/: asgi.py  drf.py  settings.py  urls.py  wsgi.py
tools/: create_module.py
tools/oracle/: branch_auth_schema_audit.sql  cleanup_branch_auth.py  ensure_auth_user_tables.py  inspect_branch_auth.py
(+486 files in other folders)
